Fix shopping_carts/_form radio position broken on safari

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -223,7 +223,7 @@ nav.navbar.navbar-sub {
     &.inline {
       margin-right: 10px;
       margin-bottom: 10px;
-      display: inline;
+      float: left;
 
       > label {
         margin-top: 5px;
